--- a/TacoCat/TacoCat.csproj
+++ b/TacoCat/TacoCat.csproj
@@ -68,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Code.html" />
+    <Content Include="CSS\custom.css" />
+    <Content Include="favicon.ico" />
     <Content Include="Index.html" />
     <Content Include="CSS\prism.css" />
     <Content Include="JS\prism.js" />
