--- a/TacoCat/TacoCat.csproj
+++ b/TacoCat/TacoCat.csproj
@@ -69,9 +69,16 @@
   <ItemGroup>
     <Content Include="Code.html" />
     <Content Include="CSS\custom.css" />
-    <Content Include="favicon.ico" />
-    <Content Include="Index.html" />
     <Content Include="CSS\prism.css" />
+    <Content Include="CSS\scroll.css" />
+    <Content Include="favi\android-chrome-192x192.png" />
+    <Content Include="favi\android-chrome-512x512.png" />
+    <Content Include="favi\apple-touch-icon.png" />
+    <Content Include="favi\favicon-16x16.png" />
+    <Content Include="favi\favicon-32x32.png" />
+    <Content Include="favi\favicon.ico" />
+    <Content Include="Index.html" />
+    <Content Include="JS\jquery-3.5.1.min.js" />
     <Content Include="JS\prism.js" />
     <Content Include="Solve.html" />
     <Content Include="Web.config" />
@@ -80,6 +87,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="favi\site.webmanifest" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
